newpid (13) UNRELEASED; urgency=medium

  * debian/tests: Use Test-Command.

 -- Christoph Berg <myon@debian.org>  Tue, 31 Mar 2020 09:56:57 +0200

newpid (12) unstable; urgency=medium

  [ Balint Reczey ]
  * test: Ignore space changes in ps' output.

  [ Christoph Berg ]
  * debian/gitlab-ci.yml: Use standard Salsa CI pipeline.

 -- Christoph Berg <myon@debian.org>  Mon, 15 Jul 2019 16:11:01 +0200

newpid (11) unstable; urgency=medium

  * Update testsuite for changed "ping" output in iputils-ping 3:20190515-2.
    Closes: #931648

 -- Christoph Berg <myon@debian.org>  Mon, 15 Jul 2019 15:17:16 +0200

newpid (10) unstable; urgency=medium

  * newnet.pod: Fix typo "netpid".

 -- Christoph Berg <christoph.berg@credativ.de>  Mon, 18 Feb 2019 14:11:35 +0100

newpid (9) unstable; urgency=medium

  [ James Clarke ]
  * Use __clone2 on ia64 as it has no clone.

  [ Christoph Berg ]
  * Bump to DH 11.

 -- Christoph Berg <christoph.berg@credativ.de>  Tue, 09 Jan 2018 10:41:56 +0100

newpid (8) unstable; urgency=medium

  * If setcap fails (because the filesystem or namespace lacks support for
    capabilities), fall back to setuid, so the installation doesn't fail.
    Thanks to Adam Conrad for the patch! Closes: #860031
  * newpid: More verbose usage output.
  * newnet: Guard arguments with --.
  * README: Note required kernel and glibc version.
  * Bump Standards-Version.

 -- Christoph Berg <myon@debian.org>  Mon, 01 May 2017 18:15:30 +0200

newpid (7) unstable; urgency=medium

  * Add support for joining network namespaces (newpid -N).

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 23 Dec 2015 11:33:12 +0100

newpid (6) unstable; urgency=medium

  * Add support for CLONE_NEWIPC and CLONE_NEWUTS (newpid -iu), and have
    newnet use it.

 -- Christoph Berg <myon@debian.org>  Sat, 10 Oct 2015 15:38:21 +0200

newpid (5) unstable; urgency=medium

  * newpid -n uses CLONE_NEWNET to start a new network namespace.
  * Add "newnet" wrapper for "newpid -n".