@@ -1,6 +1,12 @@
 #!/usr/bin/make -f
 
+include /usr/share/dpkg/architecture.mk
+
+ifeq ($(DEB_HOST_ARCH),arm64)
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all,-stackprotector
+else
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+endif
 
 override_dh_auto_install:
 	$(MAKE) install PREFIX=/usr DESTDIR=$(CURDIR)/debian/newpid
